[package]
name = "tatuin"
version = "0.26.0"
edition = "2024"
description = "Task Aggregator TUI for N providers"
repository = "https://github.com/panter-dsd/tatuin"
license = "MIT"
readme = "README.md"
rust-version = "1.89"

[workspace]
resolver = "3"
members = ["tatuin-core", "tatuin-providers"]

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.43"
clap = { version = "4.5.60", features = ["derive"] }
color-eyre = "0.6.4"
config = "0.15.19"
crossterm = { version = "0.29.0", features = [
  "event-stream",
  "bracketed-paste",
] }
ical = "0.11.0"
itertools = "0.14.0"
markdown = "1.0.0"
ratatui = "0.29.0"
regex = "1.12.3"
scopeguard = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
time = { version = "0.3.47", features = ["parsing", "formatting"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
toml = "1.0.3"
tracing = { version = "0.1.44", features = ["async-await", "log"] }
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.19"
uuid = { version = "1.20.0", features = ["v4"] }
openssl = { version = "0.10", features = ["vendored"] }
tatuin-core = { path = "./tatuin-core", version = "0.4.0" }
tatuin-providers = { path = "./tatuin-providers", version = "0.5.0" }
dirs = "6.0.0"
xdg = "3.0.0"

[profile.release]
strip = "symbols"
opt-level = 3
panic = "abort"
lto = true
