[package]
name = "tatuin-core"
version = "0.4.0"
edition = "2024"
description = "Core lib of the Tatuin project"
repository = "https://github.com/panter-dsd/tatuin"
readme = "README.md"
license = "MIT"
rust-version = "1.89"

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.44", features = ["serde"] }
url = "2.5.8"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
emojis = "0.8.0"
