[package]
name = "tatuin-providers"
version = "0.5.0"
edition = "2024"
description = "Providers lib of the Tatuin project"
repository = "https://github.com/panter-dsd/tatuin"
readme = "README.md"
license = "MIT"
rust-version = "1.89"

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.1", features = ["json"] }
reqwest_dav = "0.3.2"
url = "2.5.8"
url-builder = "0.1.1"
urlencoding = "2.1.3"
tracing = { version = "0.1.44", features = ["async-await", "log"] }
itertools = "0.14.0"
sha256 = "1.6.0"
regex = "1.12.3"
ical = "0.11.0"
strum = { version = "0.27.2", features = ["derive"] }
chrono-tz = "0.10.4"
iso8601-duration = { version = "0.2.0", features = ["chrono"] }
toml = "1.0.3"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
tempfile = "3.26.0"
redb = "3.1.0"
tatuin-core = { path = "../tatuin-core", version = "0.4.0" }
